tests/golden/error/cross_file_diagnostic/helper.tg
// Helper module: defines a function that returns Bool

pub fn get_value() -> Bool {
    true
}
